<resources>
    <string name="finalizada">Viagem finalizada!</string>
    <string name="em_andamento">Viagem em adamento</string>
    <string name="aguardando">Aguardado início da viagem</string>
    <string name="status_viagem">Status da viagem</string>
    <string name="status">Status</string>
    <string name="app_name">Send With Me Motorista</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cpf">CPF</string>
    <string name="confirmar_senha">Confirma Senha</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="salvar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="nao_tem_cadastro">Não tem cadastro? Clique aqui</string>
    <string name="fazer_login">Fazer login</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_activity_mapa">Map</string>
    <string name="titulo">Send With Me Motorista</string>
    <string name="endereco_destino">Qual será o destino da viagem?</string>
    <string name="endereco_inicio">Onde será o início da viagem?</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="voltar_perfil">Voltar para o Perfil</string>
    <string name="exemplo_data">Ex:  01  /  04  /  2019</string>
    <string name="exemplo_hora">Ex:  19  :  45</string>
    <string name="encomendas">Encomendas</string>
    <string name="encomendas_disponiveis">Segue abaixo as encomendas disponíveis.</string>
    <string name="historico_carona">Histórico de caronas</string>
    <string name="texto_historico">Segue abaixo o histórico de suas viagens.</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_senha">Esqueceu sua Senha? Clique aqui</string>
    <string name="email_reset">Digite abaixo seu email já cadastrado</string>
    <string name="instrucoes_reset">Depois de digitar seu email, clique no botão "Enviar"</string>
    <string name="viagem_revisao">Revise os dados da viagem!</string>
    <string name="salvar_viagem">Salvar viagem</string>
    <string name="voltar">Voltar</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="edicao">Edição</string>
    <string name="iniciar">Iniciar</string>
    <string name="Finalizar">Finalizar</string>

    //
    <string name="cidade">Cidade</string>
    <string name="endereço">Endereço</string>
    <string name="title_activity_viagemconfig">viagemconfig</string>
    <string name="data">Data</string>
    <string name="Horario">Horário</string>

    //
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="hora">Hora</string>
    <string name="minuto">Minuto</string>
</resources>
