<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="16dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <EditText
        android:background="@drawable/edit_text_style"
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:background="@drawable/edit_text_style"
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <Button
        android:background="@drawable/button_style"
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/tvAbreCadastro"
        android:hint="@string/nao_tem_cadastro"
        android:textSize="15sp"/>

</LinearLayout>