<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorlaranja"
    android:orientation="vertical"
    tools:context=".Activity.CadastroMotorista.CadastroActivity">

    <EditText
        android:id="@+id/edtCadNome"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCadSobrenome"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/sobrenome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadNome" />

    <EditText
        android:id="@+id/edtCadCpf"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/cpf"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadSobrenome" />

    <EditText
        android:id="@+id/edtCadDataNascimento"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/data_nascimento"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadCpf" />

    <EditText
        android:id="@+id/edtCadEmail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadDataNascimento" />

    <EditText
        android:id="@+id/edtCadSenha"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadEmail" />

    <EditText
        android:id="@+id/edtCadConfirmarSenha"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadSenha" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCadConfirmarSenha">

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:hint="@string/feminino"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="454dp" />

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:hint="@string/masculino"
            tools:layout_editor_absoluteX="239dp"
            tools:layout_editor_absoluteY="458dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/salvar"
        android:text="Salvar"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnvoltar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="17dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/salvar"
        android:text="Voltar para a tela Inicial"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvar"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>

