<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity.Viagens.InicioViagem"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/Btnavanc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_style"
        android:drawableRight="@drawable/avancar"
        android:paddingRight="16dp"
        android:text="Avançar"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Btnvolt"
        app:layout_constraintTop_toBottomOf="@+id/exemp" />

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpass7" />

    <fragment
        android:id="@+id/place_autocomplete_fragment2"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpass8" />

    <Button
        android:id="@+id/Btnvolt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_style"
        android:drawableLeft="@drawable/voltar"
        android:paddingLeft="16dp"
        android:text="Voltar"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/Btnavanc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exemp" />

    <EditText
        android:id="@+id/datadia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/dia"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toStartOf="@+id/datames"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment2" />

    <EditText
        android:id="@+id/datames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toTopOf="@+id/exemp1"
        app:layout_constraintEnd_toStartOf="@+id/dataano"
        app:layout_constraintStart_toEndOf="@+id/datadia" />

    <EditText
        android:id="@+id/dataano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/ano"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintBaseline_toBaselineOf="@+id/datames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datames" />

    <EditText
        android:id="@+id/datamin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/minuto"
        android:inputType="time"
        android:maxLength="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/datahora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datahora" />

    <EditText
        android:id="@+id/datahora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/hora"
        android:inputType="time"
        android:maxLength="2"
        app:layout_constraintEnd_toStartOf="@+id/datamin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exemp1" />

    <TextView
        android:id="@+id/Txtpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/endereco_inicio"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtpass7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="Cidade:"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txtpass" />

    <TextView
        android:id="@+id/txtpass8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="Endereço:"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment" />

    <TextView
        android:id="@+id/exemp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/exemplo_data"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        app:layout_constraintStart_toStartOf="@+id/datadia"
        app:layout_constraintTop_toBottomOf="@+id/datadia" />

    <TextView
        android:id="@+id/exemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/exemplo_hora"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        app:layout_constraintStart_toStartOf="@+id/datahora"
        app:layout_constraintTop_toBottomOf="@+id/datahora" />


</android.support.constraint.ConstraintLayout>